<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.App1.PopupOverlay" />

        <!-- Input Imię-->
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/labelName"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameInput"
            app:layout_constraintEnd_toStartOf="@+id/nameInput"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:importantForAutofill="no"
            android:hint="@string/hintNameInput"
            android:inputType="text"
            app:layout_constraintWidth_max="488dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <!-- Input Nazwisko-->
        <TextView
            android:id="@+id/surnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/labelSurname"
            app:layout_constraintBaseline_toBaselineOf="@+id/surnameInput"
            app:layout_constraintEnd_toStartOf="@+id/surnameInput"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.1"/>

        <EditText
            android:id="@+id/surnameInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/hintSurnameInput"
            android:inputType="text"
            android:importantForAutofill="no"
            app:layout_constraintWidth_max="488dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/surnameText"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            app:layout_constraintHorizontal_bias="0.9" />

        <!-- Input ilość ocen-->
        <TextView
            android:id="@+id/gradeNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/labelGradeNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/gradeNumberInput"
            app:layout_constraintEnd_toStartOf="@+id/gradeNumberInput"
            app:layout_constraintTop_toBottomOf="@+id/surnameInput"
            app:layout_constraintHorizontal_bias="0.1"/>

        <EditText
            android:id="@+id/gradeNumberInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/hintGradeNumberInput"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            app:layout_constraintWidth_max="488dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gradeNumberText"
            app:layout_constraintTop_toBottomOf="@+id/surnameInput"
            app:layout_constraintHorizontal_bias="0.9"/>

        <TextView
            android:id="@+id/meanScore"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/gradeNumberInput"
            app:layout_constraintBottom_toTopOf="@+id/gradesButton"
            ></TextView>

        <Button
            android:id="@+id/gradesButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/labelButtonOceny"
            app:layout_constraintTop_toBottomOf="@+id/meanScore" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>